# VirtualBartender

./: .gitignore  README.md  drinks.csv  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
attached_assets/: drinks.csv  drinks.json
client/src/: App.tsx
client/src/components/: ChatWindow.tsx  DrinkCard.tsx  IngredientsSelector.tsx  Layout.tsx
client/src/components/chat/: ChatInterface.tsx  ChatMessage.tsx  DrinkCard.tsx
client/src/components/layout/: Sidebar.tsx
client/src/lib/: openai.ts  queryClient.ts  weather.ts
client/src/pages/: About.tsx  Chat.tsx  History.tsx  Home.tsx
db/: index.ts  schema.ts
django_backend/: run.py
django_backend/api/: models.py  serializers.py  urls.py  views.py
django_backend/config/: settings.py
notebooks/: vector_db.ipynb
server/: index.ts  routes.ts
server/lib/: openai.ts  openai.txt  weather.ts
server/routes/: chat.ts
